--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <sonar.organization>kimeshongrid</sonar.organization>
+    <sonar.host.url>https://sonarcloud.io</sonar.host.url>
   </properties>
 
   <dependencies>
@@ -52,7 +54,6 @@
       <artifactId>libphonenumber</artifactId>
       <version>8.13.10</version>
     </dependency>
-
 
   </dependencies>
 </project>
